Legend:
+ New
* Changed
! Fixed

1.0.5 - 29.07.2012
=========================
+ TinyXML visualizers added

1.0.4 - 29.07.2012
=========================
! TinyXML2 string handling improved
+ Visualizers for boost::uuid, boost::circular_buffer, boost::container::basic_string, boost::container::deque, boost::container::vector added
+ Disabled step into boost::forward, boost::move and boost::addressof functions

1.0.3 - 23.07.2012
=========================
+ Description for DirectX errors added
+ Visualizers for boost::ratio, boost::tuple, boost::chrono::duration added

1.0.2 - 26.07.2012
=========================
+ Boost Unordered containers support added

1.0.1 - 25.07.2012
=========================
! Visualizers for boost::shared_ptr and boost::weak_ptr fixed
* Boost::Variant visualizer new implementation
* Boost visualizers divided to several files

1.0.0 - 22.07.2012
=========================
+ First release